--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,20 +5,20 @@
 :root {
   --background: oklch(0.985 0 0);
 
- --primary:oklch(78.93% 0.182 72.79);
+  --primary: oklch(78.93% 0.182 72.79);
   --muted: oklch(0.87 0 0);
-  --accent: oklch(0.97 0 0);
+  --accent: oklch(0.922 0 0);
 
   --heading: oklch(0.147 0.004 49.25);
   --text: oklch(0.374 0.01 67.558);
   --text-muted: oklch(0.553 0.013 58.071);
 
-  --border: oklch(0.87 0 0);
+  --border: oklch(0.871 0.006 286.286);
 }
 .dark {
   --background: oklch(0.145 0 0);
 
-  --primary:oklch(78.93% 0.182 72.79);
+  --primary: oklch(78.93% 0.182 72.79);
   --muted: oklch(0.269 0 0);
   --accent: oklch(0.205 0 0);
 
@@ -30,7 +30,6 @@
 }
 
 @theme inline {
-
   --color-*: initial;
   --color-background: var(--background);
   --color-primary: var(--primary);
@@ -56,10 +55,10 @@
 
 @layer components {
   .padding {
-    @apply px-2 sm:px-4 md:px-6 lg:px-10 xl:px-12 2xl:px-14;
+    @apply px-4 sm:px-6 md:px-8 lg:px-10 xl:px-12 2xl:px-14;
   }
 
   .width {
-    @apply w-full max-w-[90rem] mx-auto;
+    @apply w-[97%] max-w-[90rem] mx-auto;
   }
 }
