--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,46 +3,44 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(0.985 0 0);
+  --background: hsl(0 0% 100%);
+  --accent: hsl(0 0% 97%);
+  --muted: hsl(0 0% 91%);
+  --red: hsl(0, 92%, 61%);
+  --primary: hsl(42, 100%, 50%);
 
-  --primary: oklch(78.93% 0.182 72.79);
-  --red: oklch(0.637 0.237 25.331);
+  --heading: hsl(0 0% 4%);
+  --secondary: hsl(0, 0%, 20%);
+  --light: hsl(0 0% 45%);
 
-  --muted: oklch(0.87 0 0);
-  --accent: oklch(0.922 0 0);
-
-  --heading: oklch(0.147 0.004 49.25);
-  --text: oklch(0.374 0.01 67.558);
-  --text-muted: oklch(0.553 0.013 58.071);
-
-  --border: oklch(0.871 0.006 286.286);
+  --border: hsl(0 0% 85%);
 }
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: hsl(0 0 0%);
+  --accent: hsl(0 0% 5%);
+  --muted: hsl(0 0% 10%);
+  --red: hsl(0, 90%, 40%);
+  --primary: hsl(42, 100%, 45%);
 
-  --primary: oklch(78.93% 0.182 72.79);
-  --red: oklch(0.577 0.245 27.325);
+  --heading: hsl(0 0% 96%);
+  --secondary: hsl(0, 0%, 70%);
+  --light: hsl(0 0% 50%);
 
-  --muted: oklch(0.269 0 0);
-  --accent: oklch(0.205 0 0);
-
-  --heading: oklch(0.985 0.001 106.423);
-  --text: oklch(0.869 0.005 56.366);
-  --text-muted: oklch(0.553 0.013 58.071);
-
-  --border: oklch(0.371 0 0);
+  --border: hsl(0 0% 15%);
 }
 
 @theme inline {
-  /* --color-*: initial; */
+  --color-*: initial;
   --color-background: var(--background);
-  --color-primary: var(--primary);
-  --color-red: var(--red);
   --color-accent: var(--accent);
   --color-muted: var(--muted);
+  --color-red: var(--red);
+  --color-primary: var(--primary);
+
   --color-heading: var(--heading);
-  --color-text: var(--text);
-  --color-text-muted: var(--text-muted);
+  --color-secondary: var(--secondary);
+  --color-light: var(--light);
+
   --color-border: var(--border);
 }
 
@@ -51,7 +49,7 @@
     @apply border-border focus-visible:outline-none select-none;
   }
   body {
-    @apply bg-background text-text text-sm;
+    @apply bg-background text-secondary text-sm lg:text-base;
   }
   button {
     @apply cursor-pointer;
@@ -69,5 +67,7 @@
   *::-webkit-scrollbar {
     display: none;
   }
-  
+  .animated{
+    @apply transition-all duration-300
+  }
 }
